export enum ServiceCategory {
  HAIR_CARE = 'HAIR_CARE',
  SKIN_CARE = 'SKIN_CARE',
  MASSAGE = 'MASSAGE',
  CONSULTATION = 'CONSULTATION',
}