@startuml uml-diagram
title Appointment Booking System - Class Diagram

package "Model Layer" {

enum AppointmentStatus {
  PENDING
  CONFIRMED
  CANCELLED
  COMPLETED
}

enum ServiceCategory {
  HAIR_CARE
  SKIN_CARE
  MASSAGE 
  CONSULTATION 
}


class ApiResponse<T> {
  +success: boolean
  +message: string
  +data: T | null
} 

interface IService {
  +id: string
  +name: string
  +description: string
  +durationMinutes: number
  +price: number
  +isActive: boolean
  +requiresAdvancePayment: boolean
  +maxCapacity: number
  +category: ServiceCategory
  +createdAt: string
  +updatedAt: string
}


interface IAppointment {
  +id: string
  +serviceId: string
  +customerName: string
  +customerPhone: string
  +appointmentDate: string
  +status: AppointmentStatus
  +notes?: string
  +isFirstTimeCustomer: boolean
  +isReminderSent: boolean    
  +createdAt: string        
  +updatedAt: string 
}
}

package "Controller Layer" {
class ServiceController {
  +findAll()
  +findOne(id)
  +create(dto)
  +replace(id, dto)
  +update(id, dto)
  +remove(id)
}

class AppointmentController {
  +findAll()
  +findOne(id)
  +create(dto)
  +replace(id, dto)
  +update(id, dto)
  +remove(id)
}
}

package "Service Layer" {
class ServiceService {
  +findAll()
  +findOne(id)
  +create(dto)
  +update(id, dto)
  +remove(id)
}

class AppointmentService {
  +findAll()
  +findOne(id)
  +create(dto)
  +update(id, dto)
  +remove(id)
}
}


IService "1" -- "0..*" IAppointment : has
IAppointment --> AppointmentStatus
IService --> ServiceCategory
ServiceController --> ServiceService : uses
AppointmentController --> AppointmentService : uses

AppointmentService --> ServiceService : validate service

@enduml